--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -71,7 +71,6 @@ header {
 }
 
 .fixed {
-	position: fixed;
 	background-color: #161718;
 	opacity: 0.6;
 	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -140,7 +139,7 @@ header {
             0 -3px 5px rgba(0,0,0,.2),
             0 -5px 10px rgba(0,0,0,.25),
             0 -10px 10px rgba(0,0,0,.2),
-            0 -20px 20px rgba(0,0,0,.15);;
+            0 -20px 20px rgba(0,0,0,.15);
   	-webkit-box-shadow: 
   	0 6px 1px rgba(0,0,0,.1),
             0 0 5px rgba(0,0,0,.1),
@@ -155,7 +154,7 @@ header {
             0 -3px 5px rgba(0,0,0,.2),
             0 -5px 10px rgba(0,0,0,.25),
             0 -10px 10px rgba(0,0,0,.2),
-            0 -20px 20px rgba(0,0,0,.15);;
+            0 -20px 20px rgba(0,0,0,.15);
   	box-shadow: 
   			0 6px 1px rgba(0,0,0,.1),
             0 0 5px rgba(0,0,0,.1),
