--- a/stylesheets/pages.css
+++ b/stylesheets/pages.css
@@ -84,14 +84,14 @@
 }
 
 .design-devbox {
-	height: 200px;
+	height: 250px;
 	max-width: 1120px;
 	margin: auto;
 	background-color: #1f1f8c;
 }
 
 .desdev-box {
-	height: 200px;
+	height: 250px;
 	width: 0;
 	margin: auto;
 	overflow: hidden;
@@ -123,6 +123,20 @@
 	transition-delay: 0.8s;
 }
 
+.cardcon {
+	height: 250px;
+}
+
+.cardcon p {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	color: #fafafa;
+	font-size: 1.1em;
+	text-shadow: none;
+}
+
 .card {
 	height: 200px;
 	width: 200px;
@@ -132,21 +146,23 @@
 }
 
 .front {
-	background-color: green;
+	background-color: #2525a8;
 }
 
 .front img {
 	height: 200px;
 	width: 200px;
+	border-radius: 10px;
 }
 
 .back {
-	background-color: red;
+	background-color: #2525a8;
 }
 
 .back img {
 	height: 200px;
 	width: 200px;
+	border-radius: 10px;
 }
 
 
@@ -275,14 +291,12 @@
 }
 
 .carrousample img {
-	filter: grayscale(0.6);
-	transition: all 0.5s ease;
-}
-
-.carrousample img {
 	height: 80px;
 	border: none;
 	text-align: center;
+	cursor: pointer;
+	filter: grayscale(0.6);
+	transition: all 0.5s ease;
 }
 
 .carrousample li:hover img {
@@ -314,13 +328,15 @@
 	margin: auto;
 	margin-top: 35px;
 	margin-bottom: 30px;
-	background-color: dodgerblue;
+	overflow: hidden;
+	background-color: #fafafa;
 	transition: box-shadow 0.5s ease;
 }
 
 .sample img {
 	position: absolute;
 	display: none;
+	transition: all 0.5 ease;
 }
 
 .sample img.selected {
@@ -345,14 +361,18 @@
 }
 
 .sampleviews li {
+	padding-top: 5px;
+	padding-bottom: 5px;
 	text-shadow: none;
 	text-align: center;
 	color: #fafafa;
+	cursor: pointer;
 	font-family: 'Cabin', sans-serif;
-	transition: text-shadow 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 .sampleviews li:hover {
+	background-color: dodgerblue;
 	text-shadow: 
   			0 6px 1px rgba(0,0,0,.1),
             0 0 5px rgba(0,0,0,.1),
@@ -421,25 +441,176 @@
 	background-color: transparent;
 }
 
-.magicsquareup {
-	height: 300px;
+.skillbox {
+	height: auto;
 	width: 49.5%;
+	background-color: transparent;
+}
+
+.skill {
+	height: 300px;
+	width: 100%;
 	margin: auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
 	box-shadow: none;
+	background-color: transparent;
+}
+
+.skill .mask, .skill .content {
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+.skill h2 {
+    text-transform: uppercase;
+    color: #fafafa;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    margin: 20px 0 0 0
+}
+
+.skill p {
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center
+}
+
+.skill .mask { 
 	background-color: dodgerblue;
 }
 
-.magicsquaredown {
-	height: 300px;
-	width: 49.5%;
-	margin: auto;
-	margin-bottom: 10px;
-	box-shadow: none;
-	background-color: dodgerblue;
+.skillone .mask{
+	opacity: 0;
+	transform: translate(-460px, -100px) rotate(-90deg);
+	transition: all 0.5s 0.8s ease-in-out;
 }
 
+.skillthree .mask {
+	opacity: 0;
+	transform: translate(-460px, -100px) rotate(-180deg);
+	transition: all 0.5s 0.8s ease-in-out;
+}
+
+.skillone h2, .skillthree h2{
+	transform: translateY(-100px);
+	transition: all 0.5s ease-in-out;
+}
+
+.skillone p { 
+	transform: translateX(-500px) rotate(-180deg);
+	transition: all 0.5s ease-in-out;
+}
+
+.skillthree p { 
+	transform: translateX(-500px) rotate(180deg);
+	transition: all 0.5s ease-in-out;
+}
+
+.skilltwo .mask {
+	opacity: 0;
+	transform: translate(460px, -100px) rotate(180deg);
+	transition: all 0.5s 0.8s ease-in-out;
+}
+
+.skillfour .mask {
+	opacity: 0;
+	transform: translate(460px, -100px) rotate(-90deg);
+	transition: all 0.5s 0.8s ease-in-out;
+}
+
+.skilltwo h2, .skillfour h2{
+	transform: translateY(-100px);
+	transition: all 0.5s ease-in-out;
+}
+
+.skilltwo p { 
+	transform: translateX(300px) rotate(90deg);
+	transition: all 0.5s ease-in-out;
+}
+
+.skillfour p {
+	transform: translateX(300px) rotate(-90deg);
+	transition: all 0.5s ease-in-out;
+}
+
+.magicboxcon:hover .skillone .mask { 
+	opacity:1; 
+	transition-delay: 0s;							 
+	transform: translate(0px, 0px);
+}
+
+.magicboxcon:hover .skilltwo .mask { 
+	opacity:1; 
+	transition-delay: 0.3s;							 
+	transform: translate(0px, 0px);
+}
+
+.magicboxcon:hover .skillthree .mask { 
+	opacity:1; 
+	transition-delay: 0.6s;							 
+	transform: translate(0px, 0px);
+}
+
+.magicboxcon:hover .skillfour .mask { 
+	opacity:1; 
+	transition-delay: 0.9s;							 
+	transform: translate(0px, 0px);
+}
+
+.magicboxcon:hover .skillone h2 { 
+	transform: translateY(0px); 
+	transition-delay: 0.8s; 
+}
+
+.magicboxcon:hover .skilltwo h2 { 
+	transform: translateY(0px); 
+	transition-delay: 1.2s; 
+}
+
+.magicboxcon:hover .skillthree h2 { 
+	transform: translateY(0px); 
+	transition-delay: 1.6s; 
+}
+
+.magicboxcon:hover .skillfour h2 { 
+	transform: translateY(0px); 
+	transition-delay: 2s; 
+}
+
+.magicboxcon:hover .skillone p { 
+    transform: translateX(0px) rotate(0deg);
+	transition-delay: 1s;
+}
+
+.magicboxcon:hover .skilltwo p { 
+    transform: translateX(0px) rotate(0deg);
+	transition-delay: 1.4s;
+}
+
+.magicboxcon:hover .skillthree p { 
+    transform: translateX(0px) rotate(0deg);
+	transition-delay: 1.8s;
+}
+
+.magicboxcon:hover .skillfour p { 
+    transform: translateX(0px) rotate(0deg);
+	transition-delay: 2.2s;
+}
 
 .magicbox {
 	height: auto;
@@ -456,14 +627,194 @@
                0 20px 20px rgba(0,0,0,.15);
 }
 
-
 .outer {
 	height: 200px;
 	width: 60%;
 	margin: auto;
 	margin-top: 20px;
 	margin-bottom: 30px;
-	background-color: dodgerblue;
+}
+
+.inner {
+    width: 300px;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    background-color: transparent;
+    cursor: default;
+    box-shadow:
+			inset 0 6px 1px rgba(0,0,0,.1),
+            inset 0 0 5px rgba(0,0,0,.1),
+            inset 0 1px 3px rgba(0,0,0,.3),
+            inset 0 3px 5px rgba(0,0,0,.2),
+            inset 0 5px 10px rgba(0,0,0,.25),
+            inset 0 10px 10px rgba(0,0,0,.2),
+            inset 0 20px 20px rgba(0,0,0,.15),
+            inset 0 -6px 1px rgba(0,0,0,.1),
+            inset 0 0 5px rgba(0,0,0,.1),
+            inset 0 -1px 3px rgba(0,0,0,.3),
+            inset 0 -3px 5px rgba(0,0,0,.2),
+            inset 0 -5px 10px rgba(0,0,0,.25),
+            inset 0 -10px 10px rgba(0,0,0,.2),
+            inset 0 -20px 20px rgba(0,0,0,.15);
+}
+
+.inner .mask, .inner .content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    background-color: dodgerblue;
+    box-shadow:
+			inset 0 6px 1px rgba(0,0,0,.1),
+            inset 0 0 5px rgba(0,0,0,.1),
+            inset 0 1px 3px rgba(0,0,0,.3),
+            inset 0 3px 5px rgba(0,0,0,.2),
+            inset 0 5px 10px rgba(0,0,0,.25),
+            inset 0 10px 10px rgba(0,0,0,.2),
+            inset 0 20px 20px rgba(0,0,0,.15),
+            inset 0 -6px 1px rgba(0,0,0,.1),
+            inset 0 0 5px rgba(0,0,0,.1),
+            inset 0 -1px 3px rgba(0,0,0,.3),
+            inset 0 -3px 5px rgba(0,0,0,.2),
+            inset 0 -5px 10px rgba(0,0,0,.25),
+            inset 0 -10px 10px rgba(0,0,0,.2),
+            inset 0 -20px 20px rgba(0,0,0,.15);
+}
+
+.inner h2 {
+    text-transform: uppercase;
+    color: #fafafa;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    margin: 20px 0 0 0;
+}
+
+.inner p {
+    font-family: Georgia, serif;
+    font-size: 12px;
+    position: relative;
+    color: #fafafa;
+    padding: 10px 20px 20px;
+    text-align: center;
+}
+
+.toolone .mask {
+    transform: translateY(-100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.3s ease;
+}
+
+.toolone h2 {
+    transform: translateY(-100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.5s ease;
+}
+
+.toolone p { 
+    transform: translateY(100px);
+    opacity: 0;
+    text-shadow: none;
+	transition: all 0.8s ease;
+}
+
+.tooltwo .mask {
+    transform: translateX(-100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.3s ease;
+}
+
+.tooltwo h2 {
+    transform: translateX(-100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.5s ease;
+}
+
+.tooltwo p { 
+    transform: translateX(100px);
+    opacity: 0;
+    text-shadow: none;
+	transition: all 0.8s ease;
+}
+
+.tooltwob .mask {
+    transform: translateX(100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.3s ease;
+}
+
+.tooltwob h2 {
+    transform: translateX(100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.5s ease;
+}
+
+.tooltwob p { 
+    transform: translateX(-100px);
+    opacity: 0;
+    text-shadow: none;
+	transition: all 0.8s ease;
+}
+
+.toolthree .mask {
+    transform: translateY(100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.3s ease;
+}
+
+.toolthree h2 {
+    transform: translateY(100px);
+    opacity: 0;
+    text-shadow: none;
+    transition: all 0.5s ease;
+}
+
+.toolthree p { 
+    transform: translateY(-100px);
+    opacity: 0;
+    text-shadow: none;
+	transition: all 0.8s ease;
+}
+
+.toolone:hover .mask,
+.tooltwo:hover .mask,
+.tooltwob:hover .mask,
+.toolthree:hover .mask { 
+	opacity: 1;
+	transform: translateY(0px);
+    transform: translateX(0px);
+}
+
+.toolone:hover h2,
+.toolone:hover p,
+.tooltwo:hover h2,
+.tooltwo:hover p,
+.tooltwob:hover h2,
+.tooltwob:hover p,
+.toolthree:hover h2,
+.toolthree:hover p {
+    opacity: 1;
+    transform: translateY(0px);
+    transform: translateX(0px);
+}
+
+.toolone:hover p,
+.tooltwo:hover p,
+.tooltwob:hover p,
+.toolthree:hover p {
+    transition-delay: 0.3s;
 }
 
 .how .howbox {
