--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -50,7 +50,7 @@ header {
 	max-height: 50px;
 	max-width: 500px;
 	z-index: 101;
-	top: 0;
+	top: 10px;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -71,6 +71,7 @@ header {
 }
 
 .fixed {
+	top: 0;
 	background-color: #161718;
 	opacity: 0.6;
 	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
