--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -6,16 +6,27 @@
 
 ---------------------------------*/
 
-.menu {
-	width: 80%;
+.menu, .footnav {
+	height: 100px;
+	width: 100%;
 }
 
 .fixed {
 	opacity: 1;
 }
 
-.footnav {
-	width: 80%;
+nav a {
+	font-size: 0.5em;
+}
+
+nav img {
+	height: 70px;
+	width: auto;
+}
+
+.footnav img {
+	height: 100px;
+	width: auto;
 }
 
 /*--------------------------------
