--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -16,16 +16,16 @@
 }
 
 nav a {
-	font-size: 0.5em;
+	font-size: 1em;
 }
 
 nav img {
-	height: 70px;
+	height: 50px;
 	width: auto;
 }
 
 .footnav img {
-	height: 100px;
+	height: 60px;
 	width: auto;
 }
 
@@ -43,8 +43,12 @@ nav img {
 
 /*--------- INDEX ------------*/
 
+.introtag h1 {
+	font-size: 2em;
+}
+
 .poemcon {
-	width: 90%;
+	width: 80%;
 	padding-top: 200px;
 }
 
@@ -52,7 +56,13 @@ nav img {
 	font-size: 0.8em;
 }
 
+.projects {
+	display: none;
+}
 
+.descriptimg {
+	display: block;
+}
 
 
 /*--------- WHAT ------------*/
