--- a/stylesheets/pages.css
+++ b/stylesheets/pages.css
@@ -219,6 +219,7 @@
 	height: auto;
 	max-width: 758px;
 	margin: auto;
+	display: block;
 }
 
 .projects img {
@@ -241,6 +242,7 @@
             0 10px 10px rgba(0,0,0,.2),
             0 20px 20px rgba(0,0,0,.15);
 } 
+
 
 /*------------------------------
 
@@ -320,6 +322,10 @@
 	height: auto;
 	width: 60%;
 	float: left;
+}
+
+.index .descriptimg {
+	display: none;
 }
 
 .sample {
