--- a/stylesheets/pages.css
+++ b/stylesheets/pages.css
@@ -291,7 +291,7 @@
 }
 
 .carrousample {
-	width: 600px;
+	max-width: 600px;
 	margin: auto;
 	padding-left: 25px;
 }
@@ -888,7 +888,7 @@
 }
 
 .photo img {
-	height: auto;
+	max-height: 350px;
 	max-width: 350px;
 	border-radius: 50%;
 }
@@ -1005,6 +1005,39 @@
 }
 
 .funfacts li:hover p {
+	color: #2525a8;
+	font-size: 1.1em;
+	text-transform: uppercase;
+}
+
+.mobifunfacts {
+	margin: auto;
+	padding: 8px;
+	display: none;
+}
+
+.mobifunfacts li {
+	height: 50px;
+	transition: box-shadow 0.5s ease;
+}
+
+.mobifunfacts p {
+	transition: all 0.5s ease;
+}
+
+.mobifunfacts li:hover {
+	background-color: #fafafa;
+	box-shadow: 
+  			0 6px 1px rgba(0,0,0,.1),
+            0 0 5px rgba(0,0,0,.1),
+            0 1px 3px rgba(0,0,0,.3),
+            0 3px 5px rgba(0,0,0,.2),
+            0 5px 10px rgba(0,0,0,.25),
+            0 10px 10px rgba(0,0,0,.2),
+            0 20px 20px rgba(0,0,0,.15);
+}
+
+.mobifunfacts li:hover p {
 	color: #2525a8;
 	font-size: 1.1em;
 	text-transform: uppercase;
@@ -1169,12 +1202,9 @@ input[type="submit"]:hover {
 	background-color: dodgerblue;
 	border: 3px solid dodgerblue;
 }
-}
 
-/*------------- SOCIAL -------------*/
-
-.socialcon {
-	height: 200px;
+.mobiformbox {
+	display: none;
 }
 
 /*------------- RECEIVED -------------*/
