--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -97,9 +97,10 @@ nav img {
 
 /*--------- WHAT ------------*/
 
-.carrousample {
-	padding-left: 0;
+.carrousample img {
+	height: 50px;
 }
+
 
 .descriptimg{
 	height: auto;
